--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   --SLATE: #434455;
   --LIGHT-SLATE: #8e8f99;
   --cornflower: #e7e9fc;
-  --CLOUD: #f4f4fd;
+  --cloud: #F4F4FD;
   --NAVY-BLUE-modal: #2e2f42;
   --GREY: #2e2f42;
   --WHITE: #ffffff;
@@ -36,11 +36,6 @@ ul {
 }
 img {
   display: block;
-}
-section,
-header,
-footer {
-  margin: 0 auto;
 }
 .container {
   width: 1158px;
@@ -140,8 +135,19 @@ button {
 .logo-part-two {
   color: var(--NAVY-BLUE);
 }
+.logo-footer{
+  display: block;
+  margin-bottom: 17.5px     ;
+  color: var(--iris, #4d5ae5);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 .footer-logo-part-two {
-  color: var(--CLOUD);
+  color: var(--cloud);
 }
 .nav {
   color: var(--NAVY-BLUE);
@@ -210,15 +216,7 @@ button {
   justify-content: center;
   flex-wrap: wrap;
 }
-.service-description > li > h3 {
-  color: var(--navyblue, #2e2f42);
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
-.service-description > li > p {
+.service-description-text {
   color: var(--slate, #434455);
   font-size: 16px;
   font-weight: 400;
@@ -233,11 +231,11 @@ button {
   display: block;
   flex-shrink: 0;
 }
-.container.product-image > ul > li > img {
+.product-img {
   width: 360px;
   height: 300px;
 }
-.container.product-image > ul {
+.product-img-list {
   display: flex;
   gap: 24px;
   flex-wrap: wrap;
@@ -275,12 +273,8 @@ button {
   border-radius: 0px 0px 4px 4px;
   background: var(--white, #fff);
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 264px;
+              0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+              0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   width: calc((100% - 72px) / 4);
 }
 .headline-three {
@@ -290,7 +284,6 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
-  text-align: center;
 }
 .team-text {
   color: var(--slate, #434455);
@@ -325,11 +318,12 @@ button {
   margin-bottom: 72px;
 }
 .row-item-dscrp-container {
+
   padding: 32px 16px;
   border: 1px solid var(--cornflower, #e7e9fc);
   border-top: none;
 }
-.row > li > a > img {
+.portfolio-img {
   width: 360px;
   height: 300px;
   flex-shrink: 0;
@@ -341,7 +335,7 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
-  text-align: center;
+  
 }
 .text-fltr-results {
   color: var(--slate, #434455);
@@ -349,19 +343,19 @@ button {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
 }
 /* FOOTER */
 .footer-section {
   padding: 100px 0;
   background: var(--navyblue, #2e2f42);
 }
-footer-text {
+.footer-text {
   color: var(--cloud, #f4f4fd);
   font-size: 16px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  line-height: 24px; 
+  letter-spacing: 0.32px;
 }
 .container.footer {
   display: block;
